@@ -33,11 +33,20 @@
     <build>
         <resources>
             <resource>
-                <directory>src/main/resources</directory>
+                <directory>src/main/installer</directory>
                 <includes>
                     <include>icon/**</include>
                 </includes>
                 <filtering>false</filtering>
+                <targetPath>${project.build.directory}</targetPath>
+            </resource>
+            <resource>
+                <directory>src/main/installer</directory>
+                <includes>
+                    <include>jpackage-commandline.options</include>
+                </includes>
+                <filtering>true</filtering>
+                <targetPath>${project.build.directory}</targetPath>
             </resource>
         </resources>
         <plugins>
@@ -62,59 +71,13 @@
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-antrun-plugin</artifactId>
-                <executions>
-                    <!-- delete java rt in any case (otherwise build exits with error later) -->
-                    <execution>
-                        <id>delete-javart</id>
-                        <phase>generate-resources</phase>
-                        <goals>
-                            <goal>run</goal>
-                        </goals>
-                        <configuration>
-                            <target>
-                                <delete dir="${project.build.directory}/java-rt"/>
-                                <delete dir="${project.build.directory}/app-tmp-image"/>
-                            </target>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
+
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
                 <executions>
                     <execution>
-                        <id>step-1-create-custom-jre</id>
-                        <phase>generate-resources</phase>
-                        <goals>
-                            <goal>exec</goal>
-                        </goals>
-                        <configuration>
-                            <executable>${jdk.jlink.binary}</executable>
-                            <workingDirectory>${project.build.directory}</workingDirectory>
-                            <environmentVariables>
-                                <JAVA_HOME>${jdk.home}</JAVA_HOME>
-                            </environmentVariables>
-                            <arguments>
-                                <argument>--strip-native-commands</argument>
-                                <argument>--no-header-files</argument>
-                                <argument>--no-man-pages</argument>
-                                <argument>--compress=zip-6</argument>
-                                <argument>--strip-debug</argument>
-                                <argument>--add-modules</argument>
-                                <argument>jdk.crypto.ec,jdk.localedata,java.base,java.desktop,jdk.jfr,java.logging,jdk.unsupported</argument>
-                                <argument>--include-locales=en</argument>
-                                <argument>--output</argument>
-                                <argument>java-rt</argument>
-                            </arguments>
-                        </configuration>
-                    </execution>
-                    <!-- create application image -->
-                    <execution>
-                        <id>step-2-create-unsigned-app</id>
+                        <id>create-deb</id>
                         <phase>compile</phase>
                         <goals>
                             <goal>exec</goal>
@@ -126,77 +89,7 @@
                                 <JAVA_HOME>${jdk.home}</JAVA_HOME>
                             </environmentVariables>
                             <arguments>
-                                <argument>--verbose</argument>
-                                <argument>--name</argument>
-                                <argument>LogoRRR</argument>
-                                <argument>--app-version</argument>
-                                <argument>${revision}</argument>
-                                <!--
-                                <argument>-resource-dir</argument>
-                                <argument>classes/res/</argument>
-                                -->
-                                <argument>--vendor</argument>
-                                <argument>logorrr.app</argument>
-                                <argument>--description</argument>
-                                <argument>LogoRRR is a log file visualisation app, see https://www.logorrr.app/                                </argument>
-                                <argument>--copyright</argument>
-                                <argument>Copyright 2021-2023 www.logorrr.app</argument>
-                                <argument>--type</argument>
-                                <argument>app-image</argument>
-                                <argument>--runtime-image</argument>
-                                <argument>java-rt</argument>
-                                <argument>--input</argument>
-                                <argument>libs</argument>
-                                <argument>--main-class</argument>
-                                <argument>${main.launcher.class}</argument>
-                                <argument>--main-jar</argument>
-                                <argument>app-${project.version}.jar</argument>
-                                <argument>--java-options</argument>
-                                <argument>-Xmx4096m</argument>
-                                <argument>--dest</argument>
-                                <argument>app-tmp-image</argument>
-                                <argument>--verbose</argument>
-                            </arguments>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>step-4-create-pkg</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>exec</goal>
-                        </goals>
-                        <configuration>
-                            <executable>${jdk.jpackage.binary}</executable>
-                            <workingDirectory>${project.build.directory}</workingDirectory>
-                            <environmentVariables>
-                                <JAVA_HOME>${jdk.home}</JAVA_HOME>
-                            </environmentVariables>
-                            <arguments>
-                                <argument>--verbose</argument>
-                                <argument>--name</argument>
-                                <argument>LogoRRR</argument>
-                                <argument>--app-image</argument>
-                                <argument>app-tmp-image/LogoRRR</argument>
-                                <argument>--app-version</argument>
-                                <argument>${revision}</argument>
-                                <argument>--icon</argument>
-                                <argument>classes/icon/icon_128x128.png</argument>
-                                <!--
-                                <argument>-resource-dir</argument>
-                                <argument>classes/res/</argument>
-                                -->
-                                <argument>--vendor</argument>
-                                <argument>logorrr.app</argument>
-                                <argument>--description</argument>
-                                <argument>LogoRRR is a log file visualisation app, see https://www.logorrr.app/</argument>
-                                <argument>--copyright</argument>
-                                <argument>Copyright 2021-2023 www.logorrr.app</argument>
-                                <argument>--license-file</argument>
-                                <argument>${basedir}/../../../LICENSE</argument>
-                                <argument>--type</argument>
-                                <argument>deb</argument>
-                                <argument>--dest</argument>
-                                <argument>installer</argument>
+                                <argument>@jpackage-commandline.options</argument>
                             </arguments>
                         </configuration>
                     </execution>
